manifest_files/keyvalueapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  labels:
    app: key-value-api
  name: key-value-api
  namespace: test-env
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: key-value-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: key-value-api
    spec:
      containers:
      - image: keyvalueapi
        imagePullPolicy: IfNotPresent
        name: keyvalueapi
        ports:
        - containerPort: 5000
          protocol: TCP
